2008-09-23  Ethan Merritt  <merritt@u.washington.edu>

	* demo/html/Makefile demo/html/index.save:
	Add ellipse.dem to the set of auto-generated sample plots.

	* docs/gnuplot.doc src/gadgets.h src/graphics.c src/graphics.h
	src/hidden3d.c src/save.c src/set.c src/unset.c NEWS:
	New object type: polygon

2008-09-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics) src/graphics.c (label_width):  Add a sanity
	check for the number of auto-generated axis ticks.  Do not accept a
	request for more ticks than the resolution of the output device
	coordinate system (term->xmax). Skip label processing for empty labels.
	Bug #2117370

2008-09-20  Ethan Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (clip_line): Make sure that the clipped line segment
	returned by clip_line() has the same direction as the original segment.
	A simple draw command doesn't care, but if the segments are used to
	bound a filled polygon then a reversed segment causes fill artifacts.

2008-09-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/save.c: There is a parsing bug for the new "set view equal_axes"
	option, triggered by the save format.  Omit this option from "save"
	until the parsing bug is fixed.

	* src/term_api.h src/term.c (write_multiline):
	Remove discontinuity in text rotation at "rotate by 90".
	Text option "rotate" continues to work as it always has, but
	"rotate by 90" is no longer a synonym meriting a special case.

2008-09-13  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm:  Add support for enhanced text mode.
	Clean up polygon code.

2008-09-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc term/emf.trm:  Fix typos

2008-09-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (place_labels3d):  Clip "splot with labels" against
	plot boundaries in "set view map" mode, for consistency with 2D plots.

	* configure.in term/cairo.trm src/syscfg.h:  glib.h provides a 